# truthstamp-dapp

./: .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  CLAIM_SUBMISSION_UPDATE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYED_CONTRACTS.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_GUIDE.md  LICENSE  LOCAL_SETUP_SUMMARY.md  Makefile  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_DEPLOY.md  README.md  REAL_TRANSACTION_SETUP.md  REPOSITORY_SUMMARY.md  ROADMAP.md  SUCCESS_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING_CLAIMS.md  UNION_SWITCH_FIX.md  VISUAL_GUIDE.md  build.sh  deploy-web.sh  deploy.sh  fund-account.sh  invoke_contracts.sh  test.sh
contracts/claim_registry/: Cargo.toml
contracts/claim_registry/src/: lib.rs  test.rs
contracts/expert_registry/: Cargo.toml
contracts/expert_registry/src/: lib.rs  test.rs
contracts/review_consensus/: Cargo.toml
contracts/review_consensus/src/: lib.rs  test.rs
truthstamp-app/: .env.production.example  package-lock.json  package.json  tsconfig.json
truthstamp-app/public/: index.html
truthstamp-app/src/: App.css  App.tsx  index.css
truthstamp-app/src/pages/: BrowseClaims.css  BrowseClaims.tsx  ClaimDetail.css  ClaimDetail.tsx  ExpertDashboard.css  ExpertDashboard.tsx  HomePage.css  HomePage.tsx  MyClaims.css  MyClaims.tsx  SubmitClaim.css  SubmitClaim.tsx
truthstamp-app/src/utils/: contracts.ts  wallet.ts
