[workspace]
members = [
    "contracts/claim_registry",
    "contracts/expert_registry",
    "contracts/review_consensus",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "21.7.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
